# pyxis

./: .clang-format  .clang-tidy  .clangd  .editorconfig  .gitattributes  .gitignore  CLAUDE.md  CMakeLists.txt  CMakePresets.json  CODEOWNERS  CONTRIBUTING.md  LICENSE  NOTICE  README.md  headless_triangle.effective.json  headless_triangle.exr  plan_final.md  plan_for_v2.md  vcpkg.json
sources/pyxis_app/: CMakeLists.txt  Main.cpp
sources/pyxis_app/Private/: Application.cpp  Application.h  CliArgs.cpp  CliArgs.h  EditorPanel.cpp  HeadlessMode.cpp  HeadlessMode.h  ImGuiHost.cpp  ImGuiHost.h  IngestUsd.cpp  IngestUsd.h  StbImageWrite.cpp  VariantParser.cpp  VariantParser.h  ViewerMode.cpp  ViewerMode.h
sources/pyxis_app/Private/Camera/: FlyCameraController.cpp  FlyCameraController.h
sources/pyxis_app/Private/Config/: Configuration.cpp  Configuration.h
sources/pyxis_app/Private/HydraEngine/: HydraEngine.cpp  HydraEngine.h
sources/pyxis_app/Private/Output/: AovExrSaver.cpp  AovExrSaver.h  BackbufferScreenshot.cpp  BackbufferScreenshot.h  ExrWriter.cpp  ExrWriter.h  PngWriter.cpp  PngWriter.h  SaveFilePicker.cpp  SaveFilePicker.h  TextureReadback.cpp  TextureReadback.h
sources/pyxis_app/Private/Render/: AovRegistry.h  AovTextures.cpp  AovTextures.h  HardcodedCubeScene.cpp  HardcodedCubeScene.h
sources/pyxis_app/Private/Scene/: SceneResolver.cpp  SceneResolver.h
sources/pyxis_app/Private/UsdDirectEngine/: UsdDirectEngine.cpp  UsdDirectEngine.h
sources/pyxis_hydra/: CMakeLists.txt  plugInfo.json.in
sources/pyxis_hydra/Private/: HdPyxisRenderDelegate.cpp  HdPyxisRenderDelegate.h  HdPyxisRenderParam.h  HdPyxisRendererPlugin.cpp
sources/pyxis_hydra/Public/Pyxis/Hydra/: HdPyxisRendererPlugin.h  HydraApi.h
sources/pyxis_material_translation/: CMakeLists.txt
sources/pyxis_material_translation/Private/: UsdShadeToOpenPBR.cpp
sources/pyxis_material_translation/Public/Pyxis/MaterialTranslation/: UsdShadeToOpenPBR.h
sources/pyxis_platform/: CMakeLists.txt
sources/pyxis_platform/Private/Device/: NvrhiCallback.cpp  NvrhiCallback.h  VkDeviceManager.cpp  VkDeviceManager.h  VkDeviceManagerHeadless.cpp  VkDeviceManagerHeadless.h  VulkanFeatureCheck.cpp  VulkanFeatureCheck.h  VulkanHppStorage.cpp
sources/pyxis_platform/Private/FileSystem/: AssetLocator.cpp  Path.cpp
sources/pyxis_platform/Private/Logging/: SpdlogBackend.cpp  SpdlogBackend.h
sources/pyxis_platform/Private/Window/: GlfwWindow.cpp  GlfwWindow.h
sources/pyxis_platform/Public/Pyxis/Platform/: Forward.h  PlatformApi.h
sources/pyxis_platform/Public/Pyxis/Platform/Device/: AdapterInfo.h  DeviceCreationParams.h  IDeviceManager.h  (+2 more)
sources/pyxis_renderer/: CMakeLists.txt
sources/pyxis_renderer/Private/Diagnostics/: CommandListMarker.h
sources/pyxis_renderer/Private/Errors/: Error.cpp
sources/pyxis_renderer/Private/GpuScene/: Commit.cpp  DdsParser.cpp  DdsParser.h  GpuScene.cpp  Instance.cpp  Internal.h  Light.cpp  Material.cpp  Mesh.cpp  Texture.cpp  Volume.cpp
sources/pyxis_renderer/Private/Materials/: MaterialFlag.h  StbImageRead.cpp
sources/pyxis_renderer/Private/Passes/: PathTracePass.cpp  PathTracePass.h  TrianglePass.cpp  TrianglePass.h
sources/pyxis_renderer/Private/Profiler/: Profiler.cpp
sources/pyxis_renderer/Private/RenderGraph/: IRenderPass.h  PassContext.h  RenderGraph.cpp  RenderGraph.h
sources/pyxis_renderer/Private/Renderers/: PyxisRenderer.cpp
sources/pyxis_renderer/Private/Scene/: HandleBimap.cpp  HandleBimap.h  Phases.cpp  Phases.h  SceneWorldFacade.cpp  World.cpp  World.h
sources/pyxis_renderer/Private/Scene/Components/: BlasRef.h  Dirty.h  Geom.h  LightParams.h  MaterialGpu.h  MaterialRef.h  MeshRef.h  TextureGpu.h  Transform.h  Visibility.h
sources/pyxis_renderer/Private/Scene/Queries/: QueryCache.cpp  QueryCache.h
sources/pyxis_renderer/Private/Scene/Systems/: BuildDirtyBlas.cpp  ClearDirtyFlags.cpp  ExtractDirtyMeshes.cpp  Pipeline.cpp  Pipeline.h  RebuildTlas.cpp  UpdateBindlessTable.cpp  UploadDirtyMaterials.cpp  UploadDirtyTextures.cpp
sources/pyxis_renderer/Public/Pyxis/Renderer/: Error.h  Forward.h  GpuScene.h  Profiler.h  PyxisRenderer.h  RendererApi.h  SceneWorldFacade.h
sources/pyxis_usd_ingest/: CMakeLists.txt
sources/pyxis_usd_ingest/Private/: AnalyticGeom.cpp  AnalyticGeom.h  SkelSkinning.cpp  SkelSkinning.h  StageWalker.cpp  SubdivRefine.cpp  SubdivRefine.h  VolumeLoader.cpp  VolumeLoader.h
sources/pyxis_usd_ingest/Public/Pyxis/UsdIngest/: StageWalker.h  UsdIngestApi.h
tests/integration/: CMakeLists.txt  m13_geom_smoke.cmake  m14_xform_state_smoke.cmake  m14c_extents_smoke.cmake  m15_volume_stub_smoke.cmake  m16_texture_report_smoke.cmake  m17_ar_resolver_smoke.cmake  m18_material_health_smoke.cmake  m19_frame_flag_smoke.cmake  m20_nurbs_skel_smoke.cmake  m21_usdrender_smoke.cmake  m2_byte_equal.cmake  m4_adapter_parity.cmake  m5_material_path.cmake  m6_native_instancing.cmake  m7_aov_inspector.cmake  m7_lighting.cmake  m8_world_lobby_smoke.cmake  openpbr_playground_smoke.cmake  va13_timecode_smoke.cmake  va15_population_mask_smoke.cmake  va4_skel_multiframe_smoke.cmake
tests/unit/: AnalyticGeomTessellation.cpp  ArResolverVisibility.cpp  CMakeLists.txt  DdsParserFixture.cpp  ErrorAndExpected.cpp  FrameFlagParsing.cpp  GpuSceneCamera.cpp  GpuSceneClear.cpp  GpuSceneInstance.cpp  GpuSceneLight.cpp  GpuSceneLookupInstanceMaterial.cpp  GpuSceneMesh.cpp  GpuSceneVolume.cpp  InstanceDoubleSided.cpp  LightDescExtendedDefaults.cpp  LoadModeAndMaskParsing.cpp  MaterialBindingResolutionV2A18.cpp  MaterialCoverageFields.cpp  MaterialNetworkV2A18.cpp  MaterialSourceCounts.cpp  MaterialXTranslation.cpp  MdlTranslation.cpp  NetworkCoverageDetection.cpp  NurbsSkelDetection.cpp  NurbsTessellation.cpp  PopulationMaskParsing.cpp  PublicDescLayout.cpp  RenderGraphSmoke.cpp  RenderSettingsLayout.cpp  SceneBoundsAggregate.cpp  SceneResolver.cpp  SceneWorldInit.cpp  SubdivCreaseFixture.cpp  TextureLruEviction.cpp  TextureMemoryReporting.cpp  UdimAndInvisibleIds.cpp  UdimMultiTile.cpp  UsdRenderDetection.cpp  UsdShadeToOpenPBR.cpp  UsdVolDetection.cpp  (+3 more)
(+357 files in other folders)
